--- a/category_building.ipynb
+++ b/category_building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,14 @@
    "source": [
     "# This script downloads and reformats the wikipedia link dataset found at: http://snap.stanford.edu/data/index.html\n",
     "\n",
-    "Aim: to give each page a domain-level label, in addition to category level. Done by querying the wikipedia api for each category, and choosing domain to confer on submembers."
+    "Aim: to give each page a domain-level label, in addition to category level. Done by querying the wikipedia api for each category, and choosing domain to confer on submembers.\n",
+    "\n",
+    "Run after"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,13 +58,13 @@
        " 'figs2020']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wDir = '../../..'\n",
+    "wDir = '.'\n",
     "dataDir = '{0}/WIKIdata'.format(wDir)\n",
     "os.listdir(dataDir)"
    ]
@@ -86,7 +88,6 @@
     "linkFile = '{0}/wiki-topcats.txt'.format(dataDir)\n",
     "\n",
     "categoryFile = '{0}/wiki-topcats-categories.txt'.format(dataDir)\n",
-    "\n",
     "\n",
     "with open('{0}/pages_to_categories2020.p'.format(dataDir), 'rb') as pfile:\n",
     "    pagesCatsMappings = pickle.load(pfile)\n",
